--- a/movie_recommend_pjt/requirements.txt
+++ b/movie_recommend_pjt/requirements.txt
@@ -8,6 +8,7 @@ dj-rest-auth==7.0.0
 Django==4.2.16
 django-allauth==0.61.1
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 idna==3.10
 oauthlib==3.2.2
 pycparser==2.22
