BE_FEAT: install django-cors-headers pakcage

--- a/movie_recommend_pjt/requirements.txt
+++ b/movie_recommend_pjt/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 dj-rest-auth==7.0.0
 Django==4.2.16
 django-allauth==0.61.1
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 idna==3.10
 oauthlib==3.2.2
