--- a/movie-pjt/package.json
+++ b/movie-pjt/package.json
@@ -13,6 +13,7 @@
     "persist": "^0.2.7",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
+    "swiper": "^11.1.15",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
