--- a/movie-pjt/package.json
+++ b/movie-pjt/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vueuse/motion": "^2.2.6",
     "axios": "^1.7.7",
     "persist": "^0.2.7",
     "pinia": "^2.2.6",
